# mcpscan

./: .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile.dist  LICENSE  README.md  docker-compose.yml
.github/workflows/: release.yml  test.yml
demo/: attack.json  demo-1x1.tape  demo-4x5.tape  demo-short.tape  demo.tape  linkedin-post.md
docs/: COMPLETION_PLAN.md  MCP 기반 AI 공급망 취약점.md  MCP-based-AI-Supply-Chain-Risks.md  distribution.md  threat-models.md
exposure/config-elevator/: server.py
exposure/proxy-internal/: nginx.conf
exposure/proxy-public/: nginx.conf
guard/: Dockerfile  MANIFEST.in  README.md  mcp-policy.yaml  pyproject.toml  requirements.txt
guard/mcp_guard/: __init__.py  cisco_bridge.py  cli.py  discovery.py  export_secuaudit.py  patterns.py  policy.py  scanner.py  target_info.py
guard/mcp_guard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
guard/tests/: test_cisco_bridge.py  test_cli.py  test_discovery.py  test_endpoint_integration.py  test_export_secuaudit.py  test_policy.py  test_scanner.py  test_target_info.py
guard/tests/fixtures/: ox_research_cases.json
lab/unknown/: CVE-NOTES.md  fetch.sh
results/normalized/: normal-realistic_cisco-scanner.json  normal-realistic_mcp-guard-endpoint.json  normal-realistic_mcp-guard.json  normal-realistic_mcpscan.json  normal-strict_cisco-scanner.json  normal-strict_mcp-guard-endpoint.json  normal-strict_mcp-guard.json  normal-strict_mcpscan.json  normal-tricky_cisco-scanner.json  normal-tricky_mcp-guard-endpoint.json  normal-tricky_mcp-guard.json  normal-tricky_mcpscan.json  vuln-allowlist-bypass_cisco-scanner.json  vuln-allowlist-bypass_mcp-guard-endpoint.json  vuln-allowlist-bypass_mcp-guard.json  vuln-allowlist-bypass_mcpscan.json  vuln-authless_cisco-scanner.json  (+27 more)
runner/: Dockerfile  Dockerfile.live  __init__.py  expected-findings.json  generate-report.py  ox-live-expected.json  ox_live.py  reporting.py  run-scans.sh  run_ox_live.py
(+173 files in other folders)
