[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-guard"
version = "0.1.0"
description = "Policy-based security guardrail for MCP integrations"
requires-python = ">=3.9"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pyyaml>=6.0",
]

[project.scripts]
mcp-guard = "mcp_guard.cli:main"

[tool.setuptools.packages.find]
include = ["mcp_guard*"]
